# wellness-radar

./: .env.example  .gitignore  AGENT_SPEC.md  BUILD_NOTES.md  CLAUDE.md  DESIGN_NOTES.md  LICENSE  README.md  SCHEDULER_NOTES.md  docker-compose.yml  github_issues.csv  package.json  pnpm-lock.yaml  pyproject.toml  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
apps/jobs/: runner.py  scheduler.py
apps/web/: index.html  package.json  vite.config.ts
db/: __init__.py  migrate.py
db/migrations/: 001_canonical_schema.sql  002_source_registry_seed.sql  003_m2_private_alpha.sql  004_m3_intelligence_beta.sql  005_m4_production_hardening.sql  006_scheduler_alert_delivery.sql  007_contacts_deal_flow.sql  008_daily_brief.sql  009_cm3_neighborhood_propositions.sql  010_cm4_brief_proposition_exports.sql  011_cm5_live_demand_neighborhood_assignment.sql  012_bundles.sql  013_bundle_global.sql  014_operator_category_coverage.sql  015_venue_class.sql  016_enable_municipal_weekly_refresh.sql  017_data_source_expansion.sql  018_p0_scoring_correctness.sql  019_p1b_actionable_contacts_people.sql  020_p2a_demographic_demand_operator_class.sql  021_p2b_taxonomy_service_area_firmographics.sql
db/seeds/: manual_people.csv  manual_recovery_operators.csv
docs/: data-source-expansion-research.md
docs/analytics/: category_naics_crosswalk.md  opportunity_methodology.md
docs/design-handoff/: README.md  Wellness Radar - Console.dc.html  theme.ts  tokens.css
docs/governance/: people_corrections.md  source_rights_matrix.md
docs/runbooks/: dev.md  (+4 more)
(+127 files in other folders)
